# agentic-control-plane

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  eslint.config.mjs  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  turbo.json
.github/: CODEOWNERS
docs/: domains.md  index.md  vision.md
policies/: README.md  allow-knowledge-read.cedar  allow-knowledge-user-read.cedar  allow-r0-delegation.cedar  allow-r1-delegation.cedar  allow-tool-cloud-estate-cost.cedar  allow-tool-cloud-estate-inventory.cedar  allow-tool-code-forge-ci.cedar  allow-tool-code-forge-repo.cedar  allow-tool-itsm-calendar-conflicts.cedar  allow-tool-itsm-change-draft.cedar  allow-tool-itsm-change-get.cedar  allow-tool-itsm-change-record-lookup.cedar  allow-tool-knowledge-search.cedar  allow-tool-netsec-firewall-rules-search.cedar  allow-tool-netsec-ipam-lookup.cedar  allow-tool-netsec-security-group-get.cedar  allow-tool-netsec-vuln-scan-report.cedar  gate-r2-delegation.cedar  gate-tool-cloud-estate-tag-apply.cedar  gate-tool-cloud-estate-tag-remove.cedar  gate-tool-itsm-change-submit.cedar  gate-tool-itsm-change-withdraw.cedar  permit-compensation.cedar  permit-tool-cloud-estate-tag-apply.cedar  permit-tool-cloud-estate-tag-remove.cedar  permit-tool-itsm-change-submit.cedar  permit-tool-itsm-change-withdraw.cedar
python/: .coverage  pyproject.toml
python/acp-agent-sdk/: CHANGELOG.md  README.md  pyproject.toml
python/acp-agent-sdk/src/acp_agent_sdk/: __init__.py  agent.py  answer.py  bus.py  context.py  errors.py  evals.py  gateway_model.py  model.py  retriever.py  telemetry.py
python/acp-agent-sdk/tests/: conftest.py  test_agent.py  test_building_blocks.py  test_bus.py  test_evals.py  test_gateway_model.py
python/acp-create-agent/: CHANGELOG.md  README.md  pyproject.toml
python/acp-create-agent/src/acp_create_agent/: main.py  template.py
python/acp-create-agent/tests/: test_scaffold.py
python/acp-protocol/: CHANGELOG.md  README.md  pyproject.toml
python/acp-protocol/src/acp_protocol/: __init__.py  subjects.py  validation.py
python/acp-protocol/src/acp_protocol/schemas/: agent-card.schema.json  agent-manifest.schema.json  audit-event.schema.json  subjects.json  task-contract.schema.json  tool-server.schema.json
python/acp-protocol/tests/: test_contracts.py  test_subjects.py
python/agents/knowledge/: README.md  manifest.yaml  pyproject.toml
python/agents/knowledge/evals/: baseline.json  gate.json
python/agents/knowledge/evals/golden/: cases.json
python/agents/knowledge/evals/redteam/: cases.json
python/agents/knowledge/src/knowledge_agent/: eval_report.py  main.py
python/agents/knowledge/src/knowledge_agent/capabilities/: answer.py
python/agents/knowledge/src/knowledge_agent/prompts/: README.md
python/agents/knowledge/tests/: conftest.py  fixture_retriever.py  test_eval_report.py  test_evals.py
scripts/: api-report.mjs  approve.mjs  deploy.mjs  gen-bus-auth-keys.mjs  gen-nats-accounts.mjs  kill-switch.mjs  onboard-tenant.mjs  paved-road-slo.mjs  probes.mjs  reconstruct-task.mjs  (+4 more)
(+440 files in other folders)
