[project]
name = "acp-agent-sdk"
version = "0.2.0"
description = "ACP agent SDK: manifest-bound agents, capability handlers, governed model/retrieval access, telemetry, eval harness"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "acp-protocol",
    "temporalio>=1.9",
    "nats-py>=2.9",
    "httpx>=0.27",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_agent_sdk"]

[tool.uv.sources]
acp-protocol = { workspace = true }
