[project]
name = "acp-create-agent"
version = "0.1.0"
description = "Scaffolder for ACP Python agents: manifest, handlers, eval harness, CI — working out of the box"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.scripts]
acp-create-agent = "acp_create_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_create_agent"]
