[project]
name = "acp-protocol"
version = "0.1.0"
description = "Generated Pydantic bindings, subject vocabulary, and validators for the ACP protocol schemas"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.7",
    "jsonschema>=4.23",
    "referencing>=0.35",
    # jsonschema silently skips date/date-time format checks without this;
    # the contract tests require format enforcement to match ajv-formats.
    "rfc3339-validator>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_protocol"]
