[project]
name = "knowledge-agent"
version = "0.1.0"
description = "Knowledge & Policy agent: cited answers over the governed corpus"
requires-python = ">=3.12"
dependencies = ["acp-agent-sdk", "acp-protocol"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_agent"]

[tool.uv.sources]
acp-agent-sdk = { workspace = true }
acp-protocol = { workspace = true }
